# golf-coach

./: Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: analyses.py  router.py
backend/app/schemas/: analysis.py
docs/: README.md  api-storage.md  api-v1-contract.md  backend-scaffold-checklist.md  capture-quality-gate-spec.md  capture-spec.md  data-ml-evaluation.md  design-decisions.md  implementation-checklist.md  measurement-feedback.md  product-vision.md  roadmap.md  system-architecture.md
